results/experiments/11_90_incorrect/1486/2026-04-29_08-48-59/selection/batfish/candidate_1_vs_candidate_3_reachability.txt
--- Analyzing results/experiments/2026-04-29_06-59-06/1486/2026-04-29_08-48-59/candidates: candidate_1 vs candidate_3 ---

[DIFFERENCE DETECTED]
Counter-example Packet (Packet P): start=amsterdam [10.0.0.33->100.0.19.0 ICMP (type=8, code=0)]

Trace in Candidate 1 (Permitted):
[((ORIGINATED(default), NO_ROUTE(Discarded)))]

Trace in Candidate 2 (Denied/Different):
[((ORIGINATED(default), FORWARDED(Forwarded out interface: FastEthernet1/0 with resolved next-hop IP: 10.0.0.84, Routes: [ospfE2 (Network: 100.0.19.0/24, Next Hop: interface FastEthernet1/0 ip 10.0.0.84)]), TRANSMITTED(FastEthernet1/0)), (RECEIVED(FastEthernet0/1), FORWARDED(Forwarded out interface: FastEthernet2/0 with resolved next-hop IP: 10.0.0.83, Routes: [ospfE2 (Network: 100.0.19.0/24, Next Hop: interface FastEthernet2/0 ip 10.0.0.83)]), TRANSMITTED(FastEthernet2/0)), (RECEIVED(FastEthern [...]
